[gd_scene load_steps=4 format=2]

[ext_resource path="res://Tetris/Board.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Tetris2.gd" type="Script" id=2]
[ext_resource path="res://Assets/shape_area.png" type="Texture" id=3]

[node name="Tetris" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Board" parent="." instance=ExtResource( 1 )]

[node name="ShapeArea" type="Sprite" parent="."]
position = Vector2( 32, 32 )
texture = ExtResource( 3 )
centered = false

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="fallTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="fallTimer" to="." method="_on_nextShapeTimer_timeout"]
